Fix index font size on Safari/Firefox

--- a/src/styles/pages/index.module.scss
+++ b/src/styles/pages/index.module.scss
@@ -78,7 +78,7 @@
   }
 }
 
-@media only screen and (min-width: 570px) and (orientation: portrait) {
+@media only screen and (min-width: 600px) and (orientation: portrait) {
   .container {
     font-size: 3rem;
   }
